--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
         "fakerphp/faker": "^1.16",
+        "knplabs/knp-paginator-bundle": "^5.8",
         "knplabs/knp-time-bundle": "^1.17",
         "phpdocumentor/reflection-docblock": "^5.3",
         "sensio/framework-extra-bundle": "^6.1",
